[gd_scene load_steps=15 format=2]

[ext_resource path="res://gui/dialog/dialog_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/pause/pause.tscn" type="PackedScene" id=7]
[ext_resource path="res://gui/water_meter/water_meter.tscn" type="PackedScene" id=11]
[ext_resource path="res://gui/life_meter/life_meter.tscn" type="PackedScene" id=13]
[ext_resource path="res://gui/hud/hud.gd" type="Script" id=14]
[ext_resource path="res://fonts/red/gui_red.fnt" type="BitmapFont" id=26]
[ext_resource path="res://shaders/flash.shader" type="Shader" id=28]
[ext_resource path="res://gui/hud/hud_red_coin.png" type="Texture" id=33]
[ext_resource path="res://gui/hud/hud_coin.png" type="Texture" id=50]
[ext_resource path="res://gui/hud/hud_shine_coin.png" type="Texture" id=53]
[ext_resource path="res://gui/hud/hud_x.png" type="Texture" id=63]
[ext_resource path="res://gui/hud/hud_silver_shine.png" type="Texture" id=71]
[ext_resource path="res://gui/hud/hud_shine.png" type="Texture" id=79]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 28 )
shader_param/flash_factor = 0.0

[node name="GUI" type="CanvasLayer"]
follow_viewport_enable = true
script = ExtResource( 14 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="DialogBox" parent="." instance=ExtResource( 1 )]
visible = false

[node name="BG" type="ColorRect" parent="." groups=["pause"]]
visible = false
margin_right = 448.0
margin_bottom = 304.0
mouse_filter = 2
color = Color( 0.584314, 0.372549, 0.772549, 0.74902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsTL" type="VBoxContainer" parent="." groups=["stats"]]
margin_left = 8.0
margin_top = 8.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( -8, -8 )
mouse_filter = 2
custom_constants/separation = 21

[node name="CoinRow" type="Control" parent="StatsTL"]
margin_right = 32.0

[node name="Sprite" type="Sprite" parent="StatsTL/CoinRow"]
texture = ExtResource( 50 )
centered = false

[node name="X" type="Sprite" parent="StatsTL/CoinRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="StatsTL/CoinRow"]
material = SubResource( 1 )
margin_left = 32.0
margin_top = 1.0
margin_right = 72.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedCoinRow" type="Control" parent="StatsTL"]
margin_top = 21.0
margin_right = 32.0
margin_bottom = 21.0

[node name="Sprite" type="Sprite" parent="StatsTL/RedCoinRow"]
texture = ExtResource( 33 )
centered = false

[node name="X" type="Sprite" parent="StatsTL/RedCoinRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="StatsTL/RedCoinRow"]
margin_left = 32.0
margin_top = 1.0
margin_right = 80.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SilverShineRow" type="Control" parent="StatsTL"]
margin_top = 42.0
margin_right = 32.0
margin_bottom = 42.0

[node name="Sprite" type="Sprite" parent="StatsTL/SilverShineRow"]
texture = ExtResource( 71 )
centered = false

[node name="X" type="Sprite" parent="StatsTL/SilverShineRow"]
position = Vector2( 19, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="StatsTL/SilverShineRow"]
margin_left = 32.0
margin_top = 1.0
margin_right = 112.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsTR" type="VBoxContainer" parent="." groups=["stats"]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -8.0
margin_top = 8.0
rect_pivot_offset = Vector2( 8, -8 )
mouse_filter = 2
custom_constants/separation = 21

[node name="ShineRow" type="Control" parent="StatsTR"]
margin_right = 8.0

[node name="Sprite" type="Sprite" parent="StatsTR/ShineRow"]
position = Vector2( -40.5, 7.5 )
texture = ExtResource( 79 )

[node name="X" type="Sprite" parent="StatsTR/ShineRow"]
position = Vector2( -29, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="StatsTR/ShineRow"]
margin_left = -15.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShineCoinRow" type="Control" parent="StatsTR"]
margin_top = 21.0
margin_right = 8.0
margin_bottom = 21.0

[node name="Sprite" type="Sprite" parent="StatsTR/ShineCoinRow"]
position = Vector2( -40, 9.5 )
texture = ExtResource( 53 )

[node name="X" type="Sprite" parent="StatsTR/ShineCoinRow"]
position = Vector2( -29, 4 )
texture = ExtResource( 63 )
centered = false

[node name="Count" type="Label" parent="StatsTR/ShineCoinRow"]
margin_left = -15.0
margin_top = 1.0
margin_right = 65.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeMeter" parent="." instance=ExtResource( 13 )]

[node name="MeterControl" parent="." instance=ExtResource( 11 )]

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]
visible = false
